test/types/range/hilde/rangeSliceStatic.good
rangeSliceStatic.chpl:8: error: unresolved access of 'int' by '(range(int,boundedLow,false))'
